--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.0",
+    "body-parser": "^1.19.2",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "react": "^17.0.1",
